doks/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: micro-python-ingress
  namespace: micro-python
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - micro-python.southafricanorth.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: micro-python.southafricanorth.cloudapp.azure.com
    http:
      paths:
      - path: /flask/(.*)
        pathType: Prefix
        backend:
          service:
            name: flask-app-service
            port:
              number: 5000

      - path: /django/(.*)
        pathType: Prefix
        backend:
          service:
            name: django-app-service
            port:
              number: 8000
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: react-app-service
            port:
              number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: micro-python-ingress-static
  namespace: micro-python
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /static/$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - micro-python.southafricanorth.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: micro-python.southafricanorth.cloudapp.azure.com
    http:
      paths:
      - path:
        pathType: Prefix
        backend:
          service:
            name: react-app-service
            port: 
              number: 3000
        path: /static(/|$)(.*)
